--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "scripts": {
     "analyze": "cem analyze --litelement",
     "start": "web-dev-server",
-    "lint": "eslint --ext .js,.html . --ignore-path .gitignore && prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .js,.html . --fix --ignore-path .gitignore && prettier \"**/*.js\" --write --ignore-path .gitignore",
+    "lint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore && prettier \"**/*.js\" --check --ignore-path .gitignore",
+    "format": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore && prettier \"**/*.js\" --write --ignore-path .gitignore",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
-    "storybook:build": "npm run analyze -- --exclude dist && build-storybook"
+    "storybook:build": "npm run analyze -- --exclude dist && build-storybook",
+    "prepare": "husky install"
   },
   "dependencies": {
     "lit": "^2.0.2"
@@ -32,7 +33,7 @@
     "@web/test-runner": "^0.14.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^4.3.8",
+    "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.4.1"
   },
@@ -46,15 +47,11 @@
   "prettier": {
     "semi": false
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.js": [
+    "*.{js,mjs,html}": [
       "eslint --fix",
       "prettier --write"
-    ]
+    ],
+    "*.{md,json}": "prettier --write"
   }
 }
