--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "analyze": "cem analyze --litelement",
     "start": "web-dev-server",
-    "lint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore && prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore && prettier \"**/*.js\" --write --ignore-path .gitignore",
+    "lint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore && prettier \"**/*.{js,mjs,md,html,json}\" --check --ignore-path .gitignore",
+    "format": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore && prettier \"**/*.{js,mjs,md,html,json}\" --write --ignore-path .gitignore",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
