split lint and format scripts

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "scripts": {
     "analyze": "cem analyze --litelement",
-    "lint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore && prettier \"**/*.{js,mjs,md,html,json}\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore && prettier \"**/*.{js,mjs,md,html,json}\" --write --ignore-path .gitignore",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore ",
+    "lint:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --check --ignore-path .gitignore",
+    "format": "npm run format:eslint && npm run format:prettier",
+    "format:eslint": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --write --ignore-path .gitignore",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
