--- a/package.json
+++ b/package.json
@@ -20,31 +20,44 @@
     "format:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --write --ignore-path .gitignore",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
-    "storybook": "npm run analyze -- --exclude dist && web-dev-server -c .storybook/server.mjs",
-    "storybook:build": "npm run analyze -- --exclude dist && build-storybook",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "npm run analyze && storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "lit": "^2.0.2"
   },
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.4.17",
+    "@open-wc/building-rollup": "^3.0.2",
     "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^3.1.6",
+    "@storybook/addon-essentials": "^7.4.1",
+    "@storybook/addon-links": "^7.4.1",
+    "@storybook/blocks": "^7.4.1",
+    "@storybook/web-components": "^7.4.1",
+    "@storybook/web-components-vite": "^7.4.1",
     "@web/dev-server": "^0.1.34",
-    "@web/dev-server-storybook": "^0.5.4",
     "@web/test-runner": "^0.14.0",
+    "deepmerge": "^4.3.1",
+    "es-dev-server": "^2.1.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.1",
+    "storybook": "^7.4.1"
   },
   "customElements": "custom-elements.json",
   "eslintConfig": {
     "extends": [
       "@open-wc",
-      "prettier"
+      "prettier",
+      "plugin:storybook/recommended"
     ]
   },
   "prettier": {
