--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@storybook/web-components-vite": "^7.4.5",
     "@web/dev-server": "^0.1.34",
     "@web/test-runner": "^0.14.0",
+    "@web/test-runner-commands": "^0.8.0",
+    "@web/test-runner-playwright": "^0.10.1",
     "deepmerge": "^4.3.1",
     "es-dev-server": "^2.1.0",
     "eslint": "^8.31.0",
