ci: run tests on mac os and upload artifact

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
@@ -31,3 +31,8 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: coverage/
