--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "prepare": "husky install",
-    "storybook": "npm run analyze && storybook dev -p 6006",
+    "storybook": "npm run analyze && web-dev-server --config web-dev-server-storybook.config.mjs --watch",
     "build-storybook": "storybook build"
   },
   "dependencies": {
@@ -34,12 +34,12 @@
     "@open-wc/building-rollup": "^3.0.2",
     "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^3.1.6",
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
-    "@storybook/blocks": "^7.4.5",
-    "@storybook/web-components": "^7.4.5",
-    "@storybook/web-components-vite": "^7.4.5",
+    "@rollup/plugin-json": "^6.0.0",
     "@web/dev-server": "^0.1.34",
+    "@web/dev-server-rollup": "^0.5.2",
+    "@web/dev-server-storybook": "^1.0.6",
+    "@web/storybook-builder": "^0.1.0",
+    "@web/storybook-framework-web-components": "^0.1.1",
     "@web/test-runner": "^0.14.0",
     "@web/test-runner-commands": "^0.8.0",
     "@web/test-runner-playwright": "^0.10.1",
