--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-storybook": "^0.6.14",
     "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
+    "postcss-import": "^15.1.0",
     "postcss-lit": "^1.1.0",
     "postcss-preset-env": "^9.1.4",
     "prettier": "^2.4.1",
