--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@web/test-runner": "^0.14.0",
     "@web/test-runner-commands": "^0.8.0",
     "@web/test-runner-playwright": "^0.10.1",
+    "arg": "^5.0.2",
     "es-dev-server": "^2.1.0",
     "esbuild": "^0.19.4",
     "eslint": "^8.31.0",
