build(styles): build the theme with postcss when running the build script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "module": "dist/index.js",
   "scripts": {
     "analyze": "cem analyze --litelement --globs \"src/**/*.js\"",
-    "build": "rimraf dist && rollup -c rollup.config.js",
+    "build": "rimraf dist && npm run build:js && npm run build:css",
+    "build:js": "rollup -c rollup.config.js",
+    "build:css": "postcss src/styles/theme.css -o dist/theme.css",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore ",
     "lint:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --check --ignore-path .gitignore",
@@ -49,6 +51,8 @@
     "eslint-plugin-storybook": "^0.6.14",
     "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
+    "postcss": "^8.4.31",
+    "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "postcss-lit": "^1.1.0",
     "postcss-preset-env": "^9.1.4",
