--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "lit": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.3",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^3.1.6",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-json": "^6.0.0",
     "@web/dev-server": "^0.1.34",
     "@web/dev-server-rollup": "^0.5.2",
