--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "prepare": "husky install",
-    "storybook": "npm run analyze && web-dev-server --config web-dev-server-storybook.config.mjs --watch",
-    "build-storybook": "storybook build"
+    "storybook": "npm run storybook:start",
+    "storybook:start": "npm run analyze && storybook dev -p 6006 --no-open",
+    "storybook:build": "npm run analyze && storybook build --output-dir docs"
   },
   "dependencies": {
     "lit": "^3.0.2"
@@ -42,10 +43,14 @@
     "@open-wc/testing": "^3.1.6",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-json": "^6.0.0",
+    "@storybook/addon-a11y": "^7.5.0",
+    "@storybook/addon-essentials": "^7.5.0",
+    "@storybook/addon-links": "^7.5.0",
+    "@storybook/blocks": "^7.5.0",
+    "@storybook/web-components": "^7.5.0",
     "@web/dev-server": "^0.1.34",
     "@web/dev-server-rollup": "^0.5.2",
-    "@web/dev-server-storybook": "^1.0.6",
-    "@web/storybook-builder": "^0.1.0",
+    "@web/storybook-builder": "^0.1.2",
     "@web/storybook-framework-web-components": "^0.1.1",
     "@web/test-runner": "^0.14.0",
     "@web/test-runner-commands": "^0.8.0",
@@ -71,7 +76,7 @@
     "rollup-plugin-esbuild": "^6.0.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
-    "storybook": "^7.4.5",
+    "storybook": "^7.5.0",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0"
   },
