--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@web/test-runner": "^0.14.0",
     "@web/test-runner-commands": "^0.8.0",
     "@web/test-runner-playwright": "^0.10.1",
+    "@whitespace/storybook-addon-html": "^5.1.6",
     "arg": "^5.0.2",
     "es-dev-server": "^2.1.0",
     "esbuild": "^0.19.4",
@@ -74,6 +75,7 @@
     "prettier": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "rimraf": "^5.0.5",
     "rollup": "^3.29.4",
     "rollup-plugin-esbuild": "^6.0.2",
