test: working version with webpack5 (css broken)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "analyze": "cem analyze --litelement --globs \"src/**/*.js\"",
     "build": "rimraf dist && npm run build:js && npm run build:css",
     "build:js": "rollup -c rollup.config.js",
-    "build:css": "postcss src/styles/theme.css -o dist/theme.css && cp dist/theme.css .storybook/static/",
+    "build:css": "postcss src/styles/theme.css -o dist/theme.css && copy dist\\theme.css .storybook\\static\\",
     "watch:css": "nodemon --watch 'src/styles/*' -e css --exec npm run build:css",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore ",
@@ -29,7 +29,7 @@
     "test:watch": "web-test-runner --watch",
     "prepare": "husky install",
     "storybook": "npm run storybook:start",
-    "storybook:start": "npm run analyze && npm run watch:css & storybook dev -p 8080 --no-open",
+    "storybook:start": "npm run analyze && storybook dev -p 8080 --no-open",
     "storybook:build": "npm run analyze && npm run build:css && storybook build --output-dir docs"
   },
   "dependencies": {
@@ -46,10 +46,11 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.0",
     "@storybook/addon-designs": "^7.0.9",
-    "@storybook/addon-essentials": "^7.5.0",
-    "@storybook/addon-links": "^7.5.0",
-    "@storybook/blocks": "^7.5.0",
-    "@storybook/web-components": "^7.5.0",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/web-components": "^7.6.10",
+    "@storybook/web-components-webpack5": "^7.6.10",
     "@web/dev-server": "^0.1.34",
     "@web/dev-server-rollup": "^0.5.2",
     "@web/storybook-builder": "^0.1.2",
@@ -81,7 +82,7 @@
     "rollup-plugin-esbuild": "^6.0.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
-    "storybook": "^7.5.0",
+    "storybook": "^7.6.10",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0"
   },
