test: add an initial set of tests for certain components

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@commitlint/config-conventional": "^17.7.0",
     "@custom-elements-manifest/analyzer": "^0.4.17",
     "@open-wc/eslint-config": "^9.2.1",
-    "@open-wc/testing": "^3.1.6",
+    "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.0",
@@ -54,9 +54,9 @@
     "@web/dev-server-rollup": "^0.5.2",
     "@web/storybook-builder": "^0.1.2",
     "@web/storybook-framework-web-components": "^0.1.1",
-    "@web/test-runner": "^0.14.0",
-    "@web/test-runner-commands": "^0.8.0",
-    "@web/test-runner-playwright": "^0.10.1",
+    "@web/test-runner": "^0.18.0",
+    "@web/test-runner-commands": "^0.9.0",
+    "@web/test-runner-playwright": "^0.11.0",
     "@whitespace/storybook-addon-html": "^5.1.6",
     "arg": "^5.0.2",
     "es-dev-server": "^2.1.0",
@@ -81,6 +81,7 @@
     "rollup-plugin-esbuild": "^6.0.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
+    "sinon": "^17.0.1",
     "storybook": "^7.6.10",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0"
