--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/statistikzh/leu/",
   "scripts": {
-    "analyze": "cem analyze --litelement --globs \"src/**/*.js\"",
+    "analyze": "cem analyze --config custom-elements-manifest.config.js",
     "build": "rimraf dist && npm run build:js && npm run build:css",
     "build:js": "rollup -c rollup.config.js",
     "build:css": "postcss src/styles/theme.css -o dist/theme.css && cp dist/theme.css .storybook/static/",
@@ -40,20 +40,20 @@
     "@babel/preset-env": "^7.23.3",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@custom-elements-manifest/analyzer": "^0.4.17",
+    "@custom-elements-manifest/analyzer": "^0.9.2",
     "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.0",
     "@storybook/addon-designs": "^7.0.9",
-    "@storybook/addon-essentials": "^7.6.10",
-    "@storybook/addon-links": "^7.6.10",
-    "@storybook/blocks": "^7.6.10",
-    "@storybook/web-components": "^7.6.10",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/web-components": "^7.6.17",
     "@web/dev-server": "^0.1.34",
     "@web/dev-server-rollup": "^0.5.2",
-    "@web/storybook-builder": "^0.1.2",
+    "@web/storybook-builder": "^0.1.6",
     "@web/storybook-framework-web-components": "^0.1.1",
     "@web/test-runner": "^0.18.0",
     "@web/test-runner-commands": "^0.9.0",
@@ -83,7 +83,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "sinon": "^17.0.1",
-    "storybook": "^7.6.10",
+    "storybook": "^7.6.17",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0"
   },
