--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.14",
+    "glob": "^10.3.10",
     "husky": "^8.0.0",
     "lint-staged": "^10.5.4",
     "nodemon": "^3.0.2",
