--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "customElements": "dist/custom-elements.json",
+  "web-types": "./dist/web-types.json",
   "exports": {
     ".": {
       "default": "./dist/index.js",
@@ -71,6 +73,9 @@
     "@web/test-runner-playwright": "^0.11.0",
     "@whitespace/storybook-addon-html": "^5.1.6",
     "arg": "^5.0.2",
+    "custom-element-jet-brains-integration": "^1.4.4",
+    "custom-element-vs-code-integration": "^1.2.3",
+    "custom-element-vuejs-integration": "^1.1.0",
     "es-dev-server": "^2.1.0",
     "esbuild": "^0.20.0",
     "eslint": "^8.31.0",
@@ -101,7 +106,6 @@
     "tslib": "^2.6.2",
     "typescript": "^5.4.3"
   },
-  "customElements": "custom-elements.json",
   "prettier": {
     "semi": false
   },
