--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "format:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --write --ignore-path .gitignore",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
-    "prepare": "husky install",
+    "prepare": "husky",
     "storybook": "npm run storybook:start",
     "storybook:start": "npm run analyze && npm run watch:css & storybook dev -p 8080 --no-open",
     "storybook:build": "npm run analyze && npm run build:css && storybook build --output-dir docs"
@@ -64,11 +64,11 @@
     "@storybook/addon-links": "^7.6.17",
     "@storybook/blocks": "^7.6.17",
     "@storybook/web-components": "^7.6.17",
-    "@web/dev-server": "^0.1.34",
-    "@web/dev-server-rollup": "^0.5.2",
-    "@web/storybook-builder": "^0.1.6",
-    "@web/storybook-framework-web-components": "^0.1.1",
-    "@web/test-runner": "^0.18.0",
+    "@web/dev-server": "^0.4.6",
+    "@web/dev-server-rollup": "^0.6.4",
+    "@web/storybook-builder": "^0.1.16",
+    "@web/storybook-framework-web-components": "^0.1.2",
+    "@web/test-runner": "^0.18.2",
     "@web/test-runner-commands": "^0.9.0",
     "@web/test-runner-playwright": "^0.11.0",
     "@whitespace/storybook-addon-html": "^5.1.6",
@@ -76,14 +76,12 @@
     "custom-element-jet-brains-integration": "^1.4.4",
     "custom-element-vs-code-integration": "^1.2.3",
     "custom-element-vuejs-integration": "^1.1.0",
-    "es-dev-server": "^2.1.0",
-    "esbuild": "^0.20.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.14",
     "glob": "^10.3.10",
-    "husky": "^8.0.0",
-    "lint-staged": "^10.5.4",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
@@ -96,7 +94,6 @@
     "react-syntax-highlighter": "^15.5.0",
     "rimraf": "^5.0.5",
     "rollup": "^3.29.4",
-    "rollup-plugin-esbuild": "^6.0.2",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "sinon": "^17.0.1",
