fix: don't define dependencies in the constructor. add version variable for better comparison

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,10 @@
         "no-console": "off"
       }
     }
-  ]
+  ],
+  "languageOptions": {
+    "globals": {
+      "__LEU_VERSION__": "readonly"
+    }
+  }
 }
