--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
-  "include": ["dist/**/*.js"],
-  "exclude": ["node_modules", "dist/**/*.d.ts"],
+  "include": ["./dist/**/*.js"],
+  "exclude": ["./node_modules"],
   "compilerOptions": {
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
@@ -16,6 +16,7 @@
     "outDir": "dist",
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
-    "declarationMap": true
+    "declarationMap": true,
+    "skipLibCheck": true
   }
 }
