--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "web-types": "./dist/web-types.json",
   "exports": {
     ".": {
-      "default": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./*": "./dist/*"
   },
@@ -52,7 +52,7 @@
     "@babel/preset-env": "^7.23.3",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@custom-elements-manifest/analyzer": "^0.9.2",
+    "@custom-elements-manifest/analyzer": "^0.10.4",
     "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-babel": "^6.0.4",
@@ -60,26 +60,28 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@storybook/addon-designs": "^7.0.9",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/web-components": "^7.6.17",
+    "@storybook/addon-designs": "^8.2.0",
+    "@storybook/addon-essentials": "^8.5.8",
+    "@storybook/blocks": "^8.5.8",
+    "@storybook/core-events": "^8.5.8",
+    "@storybook/manager-api": "^8.5.8",
+    "@storybook/theming": "^8.5.8",
+    "@storybook/web-components": "^8.5.8",
     "@web/dev-server": "^0.4.6",
     "@web/dev-server-rollup": "^0.6.4",
-    "@web/storybook-builder": "^0.1.6",
-    "@web/storybook-framework-web-components": "^0.1.2",
+    "@web/storybook-builder": "^0.2.1",
+    "@web/storybook-framework-web-components": "^0.2.0",
     "@web/test-runner": "^0.18.2",
     "@web/test-runner-commands": "^0.9.0",
     "@web/test-runner-playwright": "^0.11.0",
-    "@whitespace/storybook-addon-html": "^5.1.6",
+    "@whitespace/storybook-addon-html": "^6.1.1",
     "arg": "^5.0.2",
-    "custom-element-jet-brains-integration": "^1.4.4",
-    "custom-element-vs-code-integration": "^1.2.3",
-    "custom-element-vuejs-integration": "^1.1.0",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-storybook": "^0.6.14",
+    "custom-element-jet-brains-integration": "^1.7.0",
+    "custom-element-vs-code-integration": "^1.5.0",
+    "custom-element-vuejs-integration": "^1.4.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-storybook": "^0.11.3",
     "glob": "^10.3.10",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
@@ -89,20 +91,18 @@
     "postcss-import": "^15.1.0",
     "postcss-lit": "^1.1.0",
     "postcss-preset-env": "^9.1.4",
-    "prettier": "^2.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-syntax-highlighter": "^15.5.0",
+    "prettier": "^3.5.1",
+    "react-syntax-highlighter": "^15.6.1",
     "rimraf": "^5.0.5",
     "rollup": "^3.29.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "sinon": "^17.0.1",
-    "storybook": "^7.6.17",
+    "storybook": "^8.5.8",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.7.3"
   },
   "prettier": {
     "semi": false
@@ -116,5 +116,8 @@
       "prettier --write"
     ],
     "*.{md,json}": "prettier --write"
+  },
+  "overrides": {
+    "estree-walker": "2.0.2"
   }
 }
