--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@storybook/addon-a11y": "^8.5.8",
     "@storybook/addon-designs": "^8.2.0",
     "@storybook/addon-essentials": "^8.5.8",
     "@storybook/blocks": "^8.5.8",
