--- a/package.json
+++ b/package.json
@@ -45,21 +45,21 @@
     "storybook:build": "npm run analyze && npm run build:css && storybook build --output-dir docs"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.6.3",
-    "lit": "^3.1.4"
+    "@floating-ui/dom": "^1.6.13",
+    "lit": "^3.1.4",
+    "stylelint-config-recommended": "^15.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.23.3",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@babel/preset-env": "^7.26.9",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@custom-elements-manifest/analyzer": "^0.10.4",
     "@open-wc/eslint-config": "^9.2.1",
     "@open-wc/testing": "^4.0.0",
     "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-replace": "^5.0.7",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-replace": "^6.0.2",
     "@storybook/addon-a11y": "^8.5.8",
     "@storybook/addon-designs": "^8.2.0",
     "@storybook/addon-essentials": "^8.5.8",
@@ -83,26 +83,25 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-storybook": "^0.11.3",
-    "glob": "^10.3.10",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "nodemon": "^3.0.2",
+    "glob": "^11.0.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.31",
-    "postcss-cli": "^10.1.0",
-    "postcss-import": "^15.1.0",
-    "postcss-lit": "^1.1.0",
-    "postcss-preset-env": "^9.1.4",
-    "prettier": "^3.5.1",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.1.0",
+    "postcss-lit": "^1.2.0",
+    "postcss-preset-env": "^10.1.5",
+    "prettier": "^3.5.2",
     "react-syntax-highlighter": "^15.6.1",
-    "rimraf": "^5.0.5",
-    "rollup": "^3.29.4",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.34.8",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "sinon": "^17.0.1",
     "storybook": "^8.5.8",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^34.0.0",
-    "tslib": "^2.6.2",
+    "stylelint": "^16.14.1",
+    "stylelint-config-standard": "^37.0.0",
     "typescript": "^5.7.3"
   },
   "prettier": {
