--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,14 @@
         "varsIgnorePattern": "^_",
         "argsIgnorePattern": "^_"
       }
+    ],
+    "prefer-destructuring": [
+      "error",
+      {
+        "AssignmentExpression": {
+          "array": false
+        }
+      }
     ]
   },
   "overrides": [
