--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "watch:css": "nodemon --watch 'src/styles/*' -e css --exec npm run build:css",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore ",
-    "lint:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --check --ignore-path .gitignore",
+    "lint:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --check",
     "lint:stylelint": "stylelint \"**/*.{js,css}\" --ignore-path .gitignore",
     "lint:types": "tsc",
     "format": "npm run format:eslint && npm run format:prettier",
     "format:eslint": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --write --ignore-path .gitignore",
+    "format:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --write",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "prepare": "husky",
@@ -61,6 +61,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-replace": "^6.0.2",
     "@storybook/addon-a11y": "^8.5.8",
+    "@storybook/addon-actions": "^8.5.8",
     "@storybook/addon-designs": "^8.2.0",
     "@storybook/addon-essentials": "^8.5.8",
     "@storybook/blocks": "^8.5.8",
