--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,47 @@
-name: Test
+name: Continuous integration
 
-on: workflow_dispatch
+on: [push, pull_request]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+
+      - run: npm ci
+
+      - name: Run linters
+        run: npm run lint
+
+  build:
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".nvmrc"
+
+      - run: npm ci
+
+      - name: Build library
+        run: npm run build
+
+      - name: Build storybook
+        run: npm run storybook:build
+
   test:
     runs-on: ubuntu-latest
+    needs: lint
 
     steps:
       - name: Checkout code
