style: format mdx with prettier

--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "watch:css": "nodemon --watch 'src/styles/*' -e css --exec npm run build:css",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint --ext .js,.mjs,.html . --ignore-path .gitignore ",
-    "lint:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --check",
+    "lint:prettier": "prettier \"**/*.{js,mjs,md,mdx,html,json}\" --check",
     "lint:stylelint": "stylelint \"**/*.{js,css}\" --ignore-path .gitignore",
     "lint:types": "tsc",
     "format": "npm run format:eslint && npm run format:prettier",
     "format:eslint": "eslint --ext .js,.mjs,.html . --fix --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.{js,mjs,md,html,json}\" --write",
+    "format:prettier": "prettier \"**/*.{js,mjs,md,mdx,html,json}\" --write",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
     "prepare": "husky",
