--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@storybook/theming": "^8.5.8",
     "@storybook/web-components": "^8.5.8",
     "@web/dev-server": "^0.4.6",
+    "@web/dev-server-esbuild": "^1.0.4",
     "@web/dev-server-rollup": "^0.6.4",
     "@web/storybook-builder": "^0.2.1",
     "@web/storybook-framework-web-components": "^0.2.0",
