--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.13",
-    "lit": "^3.1.4",
-    "stylelint-config-recommended": "^15.0.0"
+    "lit": "^3.1.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
@@ -100,9 +99,11 @@
     "rollup": "^4.34.8",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "sinon": "^19.0.2",
     "storybook": "^8.5.8",
     "stylelint": "^16.14.1",
+    "stylelint-config-recommended": "^15.0.0",
     "stylelint-config-standard": "^37.0.0",
     "typescript": "^5.7.3"
   },
