--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,9 @@
 {
-  "include": ["./dist/**/*.js"],
-  "exclude": ["./node_modules"],
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     // Tells TypeScript to read JS files, as
     // normally they are ignored as source files
-    "allowJs": true,
+    // "allowJs": true,
     // Generate d.ts files
     "declaration": true,
     // This compiler run should
