--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "rollup": "^4.34.8",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "sinon": "^19.0.2",
     "storybook": "^8.5.8",
     "stylelint": "^16.14.1",
