--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/statistikzh/leu/",
   "scripts": {
     "analyze": "cem analyze --config custom-elements-manifest.config.js",
-    "build": "rimraf dist && npm run build:js && npm run build:types && npm run build:css && npm run analyze",
+    "build": "rimraf dist && npm run build:types && npm run build:js && npm run build:css && npm run analyze",
     "build:js": "rollup -c rollup.config.js",
     "build:types": "tsc -p tsconfig.build.json",
     "build:css": "postcss src/styles/theme.css -o dist/theme.css && cp dist/theme.css .storybook/static/",
@@ -97,6 +97,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.34.8",
+    "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
