--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,9 +13,12 @@
     // Removing this would place the .d.ts files
     // next to the .js files
     "outDir": "dist",
+    // "rootDir": "src",
     // go to js file when using IDE functions like
     // "Go to Definition" in VSCode
     "declarationMap": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noCheck": true,
+    "noEmit": false
   }
 }
