--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "include": ["src/**/*.js", "src/**/*.ts", "global.d.ts"],
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
-    "module": "ES6",
+    "target": "es2021",
+    "module": "esnext",
     "moduleResolution": "bundler",
     "allowJs": true,
     "checkJs": true,
