--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.13",
+    "@lit-labs/virtualizer": "^2.1.0",
     "lit": "^3.1.4"
   },
   "devDependencies": {
