--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,5 +2,8 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "release-type": "node",
   "bump-minor-pre-major": true,
-  "bump-patch-for-minor-pre-major": true
+  "bump-patch-for-minor-pre-major": true,
+  "packages": {
+    ".": {}
+  }
 }
