test: draft visual regression tests

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "format:prettier": "prettier \"**/*.{ts,js,mjs,md,mdx,html,json}\" --write",
     "test": "web-test-runner --coverage",
     "test:watch": "web-test-runner --watch",
+    "test:update-visual-baseline": "web-test-runner --update-visual-baseline",
     "prepare": "husky",
     "storybook": "npm run storybook:start",
     "storybook:start": "npm run analyze && npm run watch:css & storybook dev -p 8080 --no-open",
@@ -77,6 +78,7 @@
     "@web/test-runner": "^0.20.0",
     "@web/test-runner-commands": "^0.9.0",
     "@web/test-runner-playwright": "^0.11.0",
+    "@web/test-runner-visual-regression": "^0.10.0",
     "@whitespace/storybook-addon-html": "^6.1.1",
     "arg": "^5.0.2",
     "custom-element-jet-brains-integration": "^1.7.0",
