--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 
 ## temp folders
 /.tmp/
+/test-results.json
+/screenshots/
 
 # build
 /_site/
@@ -25,3 +27,4 @@
 storybook-static
 /docs
 custom-elements.json
+
