chore: migrate to storybook with vite

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "analyze": "cem analyze --config custom-elements-manifest.config.js",
     "build": "rimraf dist && npm run build:types && npm run build:js && npm run build:css && npm run analyze",
-    "build:js": "rollup -c rollup.config.js",
-    "build:types": "tsc -p tsconfig.build.json",
+    "build:js": "vite build",
+    "build:types": "tsc -p tsconfig.build.json && rollup -c rollup.config.js",
     "build:css": "postcss src/styles/theme.css -o dist/theme.css && cp dist/theme.css .storybook/static/",
     "watch:css": "nodemon --watch 'src/styles/*' -e css --exec npm run build:css",
     "lint": "npm run lint:eslint && npm run lint:prettier",
@@ -57,34 +57,26 @@
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-replace": "^6.0.2",
-    "@storybook/addon-a11y": "^8.5.8",
-    "@storybook/addon-actions": "^8.5.8",
-    "@storybook/addon-designs": "^8.2.0",
-    "@storybook/addon-essentials": "^8.5.8",
-    "@storybook/blocks": "^8.5.8",
-    "@storybook/core-events": "^8.5.8",
-    "@storybook/manager-api": "^8.5.8",
-    "@storybook/theming": "^8.5.8",
-    "@storybook/web-components": "^8.5.8",
+    "@storybook/addon-a11y": "^10.2.7",
+    "@storybook/addon-designs": "^11.1.1",
+    "@storybook/addon-docs": "^10.2.7",
+    "@storybook/web-components-vite": "^10.2.7",
     "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
     "@web/dev-server": "^0.4.6",
     "@web/dev-server-esbuild": "^1.0.4",
     "@web/dev-server-rollup": "^0.6.4",
-    "@web/storybook-builder": "^0.2.1",
-    "@web/storybook-framework-web-components": "^0.2.0",
     "@web/test-runner": "^0.20.0",
     "@web/test-runner-commands": "^0.9.0",
     "@web/test-runner-playwright": "^0.11.0",
-    "@whitespace/storybook-addon-html": "^6.1.1",
     "arg": "^5.0.2",
     "custom-element-jet-brains-integration": "^1.7.0",
     "custom-element-vs-code-integration": "^1.5.0",
     "custom-element-vuejs-integration": "^1.4.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-storybook": "^0.11.3",
+    "eslint-plugin-storybook": "^10.2.7",
     "glob": "^11.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
@@ -98,16 +90,17 @@
     "react-syntax-highlighter": "^15.6.1",
     "rimraf": "^6.0.1",
     "rollup": "^4.34.8",
-    "rollup-plugin-dts": "^6.2.1",
+    "rollup-plugin-dts": "^6.3.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-postcss-lit": "^2.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "sinon": "^19.0.2",
-    "storybook": "^8.5.8",
+    "storybook": "^10.2.7",
     "stylelint": "^16.14.1",
     "stylelint-config-recommended": "^15.0.0",
     "stylelint-config-standard": "^37.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vite": "^7.3.1"
   },
   "prettier": {
     "semi": false
